# space_invaders

./: .gitignore  LICENSE.txt  README.md  main.py  new_architecture.md  pyproject.toml
src/app/: main.py
src/app/assets/: __init__.py
src/app/assets/piskel/: Alien 1-20251110-165511.piskel  Alien 2-20251110-170016.piskel  Grenade-20251110-175905.piskel  Gun-20251110-130144.piskel  Gun-20251110-164211.piskel  Gun-20251110-164658.piskel  Missile-20251110-180106.piskel  Mountain-20251110-170908.piskel  New Piskel-20251110-125014.piskel  Saucer-20251110-170344.piskel  SpaceInvaders.piskel
src/app/core/: config.py
src/app/models/domain/: alien.py  alien_tile.py  bullet.py  button.py  gun.py
