[project]
name = "space-invaders"
version = "2.0.0"
description = "Space Invaders game implemented in Python using the Turtle graphics library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.0.0",
]

[project.scripts]
run = "app.main:main"

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.setuptools.package-data]
app = ["assets/*", "assets/piskel/*"]

